--- a/Capturar_imagenes.ipynb
+++ b/Capturar_imagenes.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#este programa se puede utilizar para crear la base de datos\n",
     "\n",
     "import cv2\n",
+    "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -18,7 +19,6 @@
     "\n",
     "#constante usada en la captura\n",
     "count = 0\n",
-    "\n",
     "\n",
     "x,y,w,h = 0,0,100,100\n",
     "#used for saving video\n",
@@ -76,7 +76,8 @@
     "        \n",
     "    roi_max = median[y:y+h,x:x+w]\n",
     "    \n",
-    "    resized_roi = cv2.resize(roi_max, (150, 150))\n",
+    "    resized_roi = cv2.resize(roi_max, (28, 28))\n",
+    "    \n",
     "       \n",
     "    #show videos   \n",
     "    #cv2.imshow('frame_rgb', frame_rgb)\n",
@@ -91,12 +92,13 @@
     "    cv2.imshow('resized_roi', resized_roi)\n",
     "    cv2.imshow('roi_max', roi_max)\n",
     "    \n",
-    "    #guardamos los frames de la mano izda en .jpg al pulsar c\n",
+    "    #guardamos los frames de la mano izda en .jpg al pulsar el numero\n",
     "    if cv2.waitKey(1) & 0xFF == ord('c'):\n",
-    "        name = \"hand%d.jpg\"%count\n",
-    "        cv2.imwrite(name, resized_roi)\n",
+    "        name = \"hand%d.png\"%count\n",
+    "        cv2.imwrite(os.path.join('1_finger', name), resized_roi)\n",
     "        count += 1\n",
-    "    \n",
+    "\n",
+    "        \n",
     "    #out.write(resized_image)\n",
     "\n",
     "    #salimos de la ejecucion con q\n",
